# glopher

./: .gitignore  README.md
examples/servers/hello_world/: Dockerfile  go.mod  go.sum  main.go
examples/servers/hello_world/glotos/: glotos.pb.go  glotos.proto  glotos_grpc.pb.go
examples/servers/hello_world/hello_server/: grpc_commands.go  server.go
glogistery/: '  Dockerfile  glogistery_config.yaml  glogistery_manifest.yaml  go.mod  go.sum  main.go
glogistery/glotos/: glotos.pb.go  glotos.proto  glotos_grpc.pb.go  glotos_pb2.py  glotos_pb2.pyi  glotos_pb2_grpc.py
glogistery/registry_server/: config.go  grpc_messages.go  plugin_manifest.go  registry_functions.go  registry_server.go
glopher/: Dockerfile  glopher.config.yaml  pyproject.toml
glopher/glopher/: glopher.py
glopher/glopher/config/: config.py  types.py
glopher/glopher/general/: options.py  threading.py
glopher/glopher/glotos/: glotos_pb2.py  glotos_pb2.pyi  glotos_pb2_grpc.py
glopher/glopher/host_module/: grpc.py  manifest.py  plugin.py
glopher/glopher/registry/: commands.py  grpc.py
glopher/requirements/: requirements.txt
