[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glopher"
authors = [{name = "isaak-willett", email ="isaak.willett@woven-planet.global"}]
version = "0.0.1"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["glopher"]
py-modules = ["__init__"] # dash, not underscore

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
readme = {file = ["README.rst"]}

[tool.ruff]
line-length = 120
# Assume Python 3.8
target-version = "py38"

[tool.ruff.format]
# doc string formatting
docstring-code-format = true
docstring-code-line-length = 60
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "lf"

# No preview style, unstable currently
preview = false

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
]

[tool.ruff.lint]
# sorting of imports
extend-select = ["I"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = true
show_error_codes = true
implicit_optional = false
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Ignore external packages that are not typed.
module = [
  "google.*",
]
ignore_missing_imports = true

[project.scripts]
glopher = "glopher.glopher:main"
